examples/test/testpolicy10128.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10128
  namespace: namespace484
spec:
  podSelector:
    matchLabels:
      key20: value19
      key10: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value27
      podSelector:
        matchLabels:
          key19: value42
          key47: value49
          key3: value42
